--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -341,9 +341,9 @@ body {
 
 /* Card Styling */
 .card {
-    border: 0.5px solid #333;
+    border: none;
     background-color: #f4f8f9;
-    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+    box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1), 0 8px 16px rgba(0, 0, 0, 0.2),0 6px 8px rgba(0, 0, 0, 0.15);
     transition: transform 0.3s ease;
     padding: 20px;
     margin: 10px 0;
@@ -359,7 +359,9 @@ body {
     color: rgb(11, 83, 148);
     font-size: 1.5rem;
     font-weight: bold;
+    margin-top: 10px;
     margin-bottom: 10px;
+    text-align: center;
 }
 
 /* Footer Styling */
